<resources>
    <string name="app_name">VerticalScroll</string>
    <string name="col1">K</string>
    <string name="col2">A</string>
    <string name="col3">U</string>
    <string name="col4">S</string>
    <string name="col5">T</string>
    <string name="col6">U</string>
    <string name="col7">B</string>
    <string name="col8">H</string>
    <string name="col9">R</string>
    <string name="col10">A</string>
    <string name="col11">I</string>
</resources>
