<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="com.example.chandrassekhar.verticalscroll.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50sp"
            android:text="@string/col1"
            android:background="#00FFFF"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50sp"
            android:text="@string/col2"
            android:background="#0000FF"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50sp"
            android:text="@string/col3"
            android:background="#FF1493"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col4"
            android:background="#FFD700"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col5"
            android:background="#008000"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col6"
            android:background="#DC143C"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col7"
            android:background="#00FF00"
            android:layout_weight="1"
            android:textAlignment="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col8"
            android:background="#808000"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col9"
            android:background="#FF0000"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col10"
            android:background="#FF7F50"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="@string/col11"
            android:background="#FF7F"
            android:layout_weight="1"
            android:textAlignment="center"
            />
    </LinearLayout>

</ScrollView>
